cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project( DifferentialDrive )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(/home/super/Documents/DifferentialDrive/)
include_directories(/home/super/Documents/DifferentialDrive/AprilTags/build/include/)
include_directories(/usr/local/include/eigen3)
link_directories(/home/super/Documents/DifferentialDrive/AprilTags/build/lib/)
add_executable( differentialDrive differentialDrive.cpp )
target_link_libraries( differentialDrive ${OpenCV_LIBS} libapriltags.a libv4l2.so)
