cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
#set (CMAKE_BUILD_TYPE Release)
project( DifferentialDrive )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(/home/super/Documents/DifferentialDrive/)
include_directories(/home/super/Documents/DifferentialDrive/AprilTags/build/include/)
include_directories(/usr/local/include/eigen3)
link_directories(/home/super/Documents/DifferentialDrive/AprilTags/build/lib/)
link_directories(/home/super/Documents/DifferentialDrive/build/)#for our own library objects
add_library(serial SHARED Serial.cpp)
add_library(planner SHARED pathplanners.cpp)
add_library(controller SHARED controllers.cpp)
add_library(aprilvideointerface SHARED aprilvideointerface.cpp)
add_executable( differentialDrive differentialDrive.cpp )
target_link_libraries( differentialDrive ${OpenCV_LIBS} aprilvideointerface libapriltags.a libv4l2.so serial planner controller )#order matters, the one that comes earlier depends on the one that comes later
