cmake_minimum_required(VERSION 3.0)
project( sandbox )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(/home/super/Documents/DifferentialDrive/)
include_directories(/usr/local/include/eigen3)
link_directories(/home/super/Documents/DifferentialDrive/AprilTags)
add_executable( sandbox sandbox.cpp )
target_link_libraries( sandbox ${OpenCV_LIBS} libapriltags.a libv4l2.so)
